--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.jpa.properties.hibernate.current_session_context_class=
 org.springframework.orm.hibernate5.SpringSessionContext
+server.port=6969
+
 
