--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/server_db
+spring.datasource.url=jdbc:mysql://backend-mysql:3306/server_db
 spring.datasource.username=root
 spring.datasource.password=Test1234
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-spring.jpa.properties.hibernate.current_session_context_class=
-org.springframework.orm.hibernate5.SpringSessionContext
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 server.port=6969
-
-
